[package]
name = "retrying-core"
version = "0.1.0"
rust-version = "1.64"
description = "Core of `retrying` library for Rust (developers only)"
authors = ["Maksym Dovhal <maksym.dovhal@gmail.com>"]
keywords = ["retry", "retrying"]
homepage = "https://github.com/dintegrity/retrying"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"

[lib]
proc-macro = true
name = "retrying_core"

[dependencies]
syn = {version = "2.0", features = ["full"]}
quote = "1.0"
proc-macro2 = "1.0"